Fix video overlap, responsive issues, and update location to Ontario

--- a/public/assets/scss/layout/pages/_project.scss
+++ b/public/assets/scss/layout/pages/_project.scss
@@ -264,6 +264,9 @@
         @media #{$lg}{
             width: 100%;
         }
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 .tp-project-2 {
@@ -273,6 +276,9 @@
         transition: .3s;
         &.addclass{
             background-color: var(--tp-common-black);
+        }
+        @media #{$xl,$lg}{
+            padding: 30px 0;
         }
         @media #{$xs}{
             padding: 50px 0;
