--- a/public/assets/scss/layout/pages/_service.scss
+++ b/public/assets/scss/layout/pages/_service.scss
@@ -75,6 +75,9 @@
 .tp-service-2{
     &-area{
         padding: 70px 0;
+        @media #{$xl,$lg}{
+            padding-top: 100px;
+        }
         @media #{$xs}{
             padding: 50px 0;
         }
