--- a/public/assets/scss/layout/pages/_video.scss
+++ b/public/assets/scss/layout/pages/_video.scss
@@ -25,7 +25,7 @@
         @media #{$xs}{
             margin: 0;
             margin-bottom: 50px;
-            height: 420px;
+            height: 300px;
             width: 100%;
         }
         &::after{
@@ -119,15 +119,15 @@
         line-height: 0;
         overflow: hidden;
         & video{
-            height: 920px;
+            height: 620px;
             width: 100%;
             object-fit: cover;
             overflow: hidden;
             @media #{$xl,$lg}{
-                height: 700px;
+                height: 600px;
             }
             @media #{$md,$xs}{
-                height: 600px;
+                height: 400px;
             }
         } 
     }
