--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -83,3 +83,6 @@
   height: 450px !important;
 }
 
+.tp-service-2-area{
+margin-top: 50px !important;
+}
